--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,9 @@
     <title>
       Dura-Europos Archive Stories
     </title>
+    <script src="%PUBLIC_URL%/histropediajs-1.2.0/js/jquery-3.5.1.min.js"></script>
+    <script src="%PUBLIC_URL%/histropediajs-1.2.0/js/jquery.mousewheel-3.1.13.min.js"></script>
+    <script src="%PUBLIC_URL%/histropediajs-1.2.0/js/histropedia-1.2.0.js"></script>
     <link rel="stylesheet" href="%PUBLIC_URL%/app.css">
   </head>
   <body>
