--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon-32x32.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#bd5319" />
+    <meta name="theme-color" content="#c86919" />
     <meta
       name="description"
       content="Dura-Europos Archive Stories developed by the ScienceStories.io Team"
